@@ -27,6 +27,12 @@ This class serves as printout class for HTML documents.
 Constructor. 
 
 
+\membersection{wxHtmlPrintout::SetFonts}\label{wxhtmlprintoutsetfonts}
+
+\func{void}{SetFonts}{\param{wxString }{normal\_face}, \param{wxString }{fixed\_face}, \param{const int }{*sizes = NULL}}
+
+Sets fonts. See \helpref{wxHtmlWindow::SetFonts}{wxhtmlwindowsetfonts} for
+detailed description.
 
 \membersection{wxHtmlPrintout::SetFooter}\label{wxhtmlprintoutsetfooter}
 
