@@ -75,11 +75,11 @@
 
 #define wxHTML_COND_ISANCHOR              1
         // Finds the anchor of 'param' name (pointer to wxString).
-	
+    
 #define wxHTML_COND_ISIMAGEMAP            2
         // Finds imagemap of 'param' name (pointer to wxString).
-	// (used exclusively by m_image.cpp)
-	
+    // (used exclusively by m_image.cpp)
+    
 #define wxHTML_COND_USER              10000
         // User-defined conditions should start from this number
 
@@ -99,10 +99,32 @@
     /* maximum number of pages printable via html printing */
 
 
-
-
-
-
+    /* default font sizes */
+#ifdef __WXMSW__
+   #define wxHTML_FONT_SIZE_1              7
+   #define wxHTML_FONT_SIZE_2              8
+   #define wxHTML_FONT_SIZE_3             10
+   #define wxHTML_FONT_SIZE_4             12
+   #define wxHTML_FONT_SIZE_5             16
+   #define wxHTML_FONT_SIZE_6             22
+   #define wxHTML_FONT_SIZE_7             30
+#elif defined(__WXMAC__)
+   #define wxHTML_FONT_SIZE_1              9
+   #define wxHTML_FONT_SIZE_2             12
+   #define wxHTML_FONT_SIZE_3             14
+   #define wxHTML_FONT_SIZE_4             18
+   #define wxHTML_FONT_SIZE_5             24
+   #define wxHTML_FONT_SIZE_6             30
+   #define wxHTML_FONT_SIZE_7             36
+#else
+   #define wxHTML_FONT_SIZE_1             10
+   #define wxHTML_FONT_SIZE_2             12
+   #define wxHTML_FONT_SIZE_3             14
+   #define wxHTML_FONT_SIZE_4             16
+   #define wxHTML_FONT_SIZE_5             19
+   #define wxHTML_FONT_SIZE_6             24
+   #define wxHTML_FONT_SIZE_7             32
+#endif
 
 
 #if WXWIN_COMPATIBILITY_2
