@@ -53,6 +53,9 @@ public:
     // (see wxFileSystem for detailed explanation)
     void SetHtmlText(const wxString& html, const wxString& basepath = wxEmptyString, bool isdir = TRUE);
 
+    // Sets fonts to be used when displaying HTML page. (if size null then default sizes used).
+    void SetFonts(wxString normal_face, wxString fixed_face, const int *sizes = NULL);
+
     // [x,y] is position of upper-left corner of printing rectangle (see SetSize)
     // from is y-coordinate of the very first visible cell 
     // Returned value is y coordinate of first cell than didn't fit onto page.
@@ -124,6 +127,9 @@ public:
             //
             // pg is one of wxPAGE_ODD, wxPAGE_EVEN and wx_PAGE_ALL constants.
             // You can set different header/footer for odd and even pages
+
+    // Sets fonts to be used when displaying HTML page. (if size null then default sizes used).
+    void SetFonts(wxString normal_face, wxString fixed_face, const int *sizes = NULL);
 
     void SetMargins(float top = 25.2, float bottom = 25.2, float left = 25.2, float right = 25.2, 
                     float spaces = 5);
@@ -207,6 +213,9 @@ public:
             // pg is one of wxPAGE_ODD, wxPAGE_EVEN and wx_PAGE_ALL constants.
             // You can set different header/footer for odd and even pages
 
+    void SetFonts(wxString normal_face, wxString fixed_face, const int *sizes = 0);
+    // Sets fonts to be used when displaying HTML page. (if size null then default sizes used)
+
     wxPrintData *GetPrintData() {return m_PrintData;}
     wxPageSetupDialogData *GetPageSetupData() {return m_PageSetupData;}
             // return page setting data objects. 
@@ -221,6 +230,9 @@ private:
     wxPrintData *m_PrintData;
     wxPageSetupDialogData *m_PageSetupData;
     wxString m_Name;
+    int m_FontsSizesArr[7];
+    int *m_FontsSizes;
+    wxString m_FontFaceFixed, m_FontFaceNormal;
     wxString m_Headers[2], m_Footers[2];
     wxFrame *m_Frame;
 
