@@ -106,7 +106,11 @@ wxMotif:
 
 wxUniv:
 
-- Controls in toolbars now supported.
+- controls in toolbars now supported
+
+wxHTML:
+
+- added SetFonts to HTML printing classes (Adrian Philip Look)
 
 
 OLD CHANGES
